HVAC Backup 2/objects/Warranty_Obligation__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Warranty Obligations</relationshipLabel>
        <relationshipName>Warranty_Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Material_Group__c</fullName>
        <label>Material Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Obligation__c</fullName>
        <label>Obligation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>Wty</fullName>
                </value>
                <value>
                    <fullName>PEXWTY</fullName>
                </value>
                <value>
                    <fullName>EXWTY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>BlueStar</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>DLR</fullName>
                </value>
                <value>
                    <fullName>ESA</fullName>
                </value>
                <value>
                    <fullName>BSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Term__c</fullName>
        <label>Warranty Term</label>
        <referenceTo>WarrantyTerm</referenceTo>
        <relationshipLabel>Warranty Obligations</relationshipLabel>
        <relationshipName>Warranty_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Warranty Obligation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WO-{0000}</displayFormat>
        <label>Warranty Obligation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>